tests/mysql/ui-common/duplicate_top_param_mapping.stderr
error: sql_forge!: duplicated parameter mapping
  --> tests/mysql/tmp-ui/duplicate_top_param_mapping.rs:10:24
   |
10 |         ( :id = 1i64, :id = 2i64 ),
   |                        ^^
